fixed text alignment

--- a/src/app/views/Index/styles.module.css
+++ b/src/app/views/Index/styles.module.css
@@ -30,7 +30,7 @@
 .textContainer {
   text-align: center;
   padding-left: 5vw;
-  padding-top: 4vh;
+  padding-top: 2vh;
   background-color: rgb(1, 1, 1, 0.2);
   color: white;
   font-family: Ariel, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
